Fix navbar max-height to allow menu to open properly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -304,9 +304,13 @@ body {
         --navbar-height: 70px;
     }
     
-    /* Ensure navbar doesn't exceed 70px when collapsed */
+    /* Ensure navbar can expand when opened */
+    .navbar {
+        max-height: 100%;
+    }
+    
     .navbar:not(.show) {
-        max-height: 70px;
+        max-height: 100%;
     }
     
     /* Ensure navbar collapse works */
